--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <!-- =============================================== -->
 
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
   <link rel="stylesheet" href="css/style.css">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -187,7 +187,7 @@
             poster = data.results[i].poster_path;
             date = new Date(data.results[i].release_date);
             total += '<div id="dalam" > <a onclick="detail(' + id +
-              ')"> <div id="lala" tabindex="1"> <img src="http://image.tmdb.org/t/p/w500' + poster +
+              ')"> <div id="lala" tabindex="1"> <img src="https://image.tmdb.org/t/p/w500' + poster +
               '" alt="Poster Movie"> <p>' + title + ' (' + date.getFullYear() + ')</p> </div> </a> </div>';
           }
           isi.innerHTML = total;
@@ -236,9 +236,9 @@
           <div class="ui-bar ui-bar-e" style="height:120px">
             <h3>Latest News</h3>
             <ul>
-              <li class="lines"><a href="http://www.anarieldesign.com/my-store/" title="" rel="nofollow">My Store</a>
+              <li class="lines"><a href="https://www.anarieldesign.com/my-store/" title="" rel="nofollow">My Store</a>
               </li>
-              <li class="lines"><a href="http://www.anarieldesign.com/my-store/" class="" rel="nofollow">Latest News</a>
+              <li class="lines"><a href="https://www.anarieldesign.com/my-store/" class="" rel="nofollow">Latest News</a>
               </li>
               <li class="lines"><a href="https://creativemarket.com/anarieldesign/1356-Special-Bundle" class=""
                   rel="nofollow">Creative Market</a></li>
@@ -259,7 +259,7 @@
       <!-- /grid-b -->
 
       <div id="copyright">
-        <p class="copyright">&copy; Copyright 2012. &quot;Trixy Mobile&quot; by <a href="http://www.anarieldesign.com/"
+        <p class="copyright">&copy; Copyright 2012. &quot;Trixy Mobile&quot; by <a href="https://www.anarieldesign.com/"
             rel="nofollow">Anariel Design</a>. All rights reserved.</p>
       </div>
     </div>
