--- a/search.html
+++ b/search.html
@@ -20,7 +20,7 @@
 
 	<!-- =============================================== -->
 
-	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
 	<link rel="stylesheet" href="css/style.css">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -244,7 +244,7 @@
 							}
 
 							if (channel == "movie") {
-								fetch('http://api.themoviedb.org/3/search/' + channel +
+								fetch('https://api.themoviedb.org/3/search/' + channel +
 										'?api_key=73d84d55c014c25019054914bad7b5ad&query=' + search)
 									.then((resp) => resp.json())
 									.then(function (data) {
@@ -264,7 +264,7 @@
 											if (poster == null) {
 												poster = "images/no-gambar.jpg";
 											} else {
-												poster = "http://image.tmdb.org/t/p/w500" + poster;
+												poster = "https://image.tmdb.org/t/p/w500" + poster;
 											}
 											date = new Date(data.results[i].release_date);
 											total += '<div id="dalam" > <a onclick="detail(' + id +
@@ -278,7 +278,7 @@
 										console.log(error);
 									});
 							} else {
-								fetch('http://api.themoviedb.org/3/search/' + channel +
+								fetch('https://api.themoviedb.org/3/search/' + channel +
 										'?api_key=73d84d55c014c25019054914bad7b5ad&query=' + search)
 									.then((resp) => resp.json())
 									.then(function (data) {
@@ -298,7 +298,7 @@
 											if (poster == null) {
 												poster = "images/no-gambar.jpg";
 											} else {
-												poster = "http://image.tmdb.org/t/p/w500" + poster;
+												poster = "https://image.tmdb.org/t/p/w500" + poster;
 											}
 											date = new Date(data.results[i].first_air_date);
 											total += '<div id="dalam" > <a onclick="detail(' + id +
@@ -339,9 +339,9 @@
 					<div class="ui-bar ui-bar-e" style="height:120px">
 						<h3>Latest News</h3>
 						<ul>
-							<li class="lines"><a href="http://www.anarieldesign.com/my-store/" title=""
+							<li class="lines"><a href="https://www.anarieldesign.com/my-store/" title=""
 									rel="nofollow">My Store</a></li>
-							<li class="lines"><a href="http://www.anarieldesign.com/my-store/" class=""
+							<li class="lines"><a href="https://www.anarieldesign.com/my-store/" class=""
 									rel="nofollow">Latest News</a></li>
 							<li class="lines"><a href="https://creativemarket.com/anarieldesign/1356-Special-Bundle"
 									class="" rel="nofollow">Creative Market</a></li>
@@ -363,7 +363,7 @@
 
 			<div id="copyright">
 				<p class="copyright">&copy; Copyright 2012. &quot;Trixy Mobile&quot; by <a
-						href="http://www.anarieldesign.com/" rel="nofollow">Anariel Design</a>. All rights reserved.</p>
+						href="https://www.anarieldesign.com/" rel="nofollow">Anariel Design</a>. All rights reserved.</p>
 			</div>
 		</div>
 		<!-- /footer -->
