--- a/tvshow.html
+++ b/tvshow.html
@@ -447,7 +447,7 @@
 
     </div><!-- /leftpanel3 -->
   </div>
-  <script src="js/pwa.js"></script>
+  <script src="/js/pwa.js"></script>
   <script>
     function index() {
       location.href = 'index.html';
