--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
     </div><!-- /leftpanel3 -->
   </div>
-  <script src="/js/pwa.js"></script>
+  <script src="js/pwa.js"></script>
   <script>
     function index() {
       location.href = 'index.html';
